# xtream-ai-assignment-developer

./: README.md
project/: pyproject.toml
project/diamonds/: paths.py
project/diamonds/api/: app.py
project/diamonds/data/clean_data/: diamonds.csv  diamonds_basic_test.csv  diamonds_basic_train.csv  diamonds_categorical_test.csv  diamonds_categorical_train.csv
project/diamonds/data/models/lr/: lr_20240628_114528.json  lr_20240628_114528.sav
project/diamonds/data/models/xgb/: xgb_20240628_114531.json  xgb_20240628_114531.sav  xgb_tuned_20240628_114612.json  xgb_tuned_20240628_114612.sav
project/diamonds/data/raw_data/diamonds.csv_report/: diamonds_report.md
project/diamonds/data_generation/: data_cleaning.py  data_exploration.py  data_preprocess.py
project/diamonds/data_processing/: data_cleaning.py  data_exploration.py  data_generation.py  data_loading.py  data_preprocess.py
project/diamonds/entrypoints/data_generation/: do_clean_data.py  do_explore_data.py  do_generate_data.py  do_preprocess_data.py
project/diamonds/entrypoints/data_processing/: do_clean_data.py  do_explore_data.py  do_generate_data.py  do_preprocess_data.py
project/diamonds/entrypoints/inference/: do_inference.py
project/diamonds/entrypoints/training/: do_training.py
project/diamonds/inference/: inference.py
project/diamonds/training/: models_pipeline.py
