[tool.poetry]
name = "diamonds"
version = "0.1.0"
description = ""
authors = ["Marco Sansottera <marco.sansottera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
numpy = "^2.0.0"
plotly = "^5.22.0"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
pathlib = "^1.0.1"
loguru = "^0.7.2"
mdutils = "^1.6.0"
tabulate = "^0.9.0"
kaleido = "0.2.1"
joblib = "^1.4.2"
datetime = "^5.5"
xgboost = "^2.1.0"
optuna = "^3.6.1"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlite-utils = "^3.36"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "C", "N", "Q", "W", "I", "S"]
lint.ignore = ["E501", ]
exclude = ["node_modules", "migrations"]
